- Fixed bug #47265 (generating phar.phar failes because of safe_mode). (Greg)
- Fixed bug #47229 (preg_quote() should escape the '-' char). (Nuno)
- Fixed bug #47085 (rename() returns true even if the file in PHAR does not exist). (Greg)
- Fixed bug #47031 (Fix constants in DualIterator example). (Etienne)
- Fixed bug #46347 (parse_ini_file() doesn't support * in keys). (Nuno)


29 Jan 2009, PHP 5.3.0 Beta 1
- Upgraded bundled sqlite to version 3.6.10. (Scott, Ilia)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Improved DNS API
 . Added Windows support for dns_check_record(), dns_get_mx(), checkdnsrr() and
   getmxrr(). (Pierre)
 . Added support for old style DNS functions (supports OSX and FBSD). (Scott)
 . Added a new "entries" array in dns_check_record() containing the TXT
   elements. (Felipe, Pierre)

- Changed __call() to be invoked on private/protected method access, similar to
  properties and __get(). (Andrei)
- Changed dl() to be disabled by default. Enabled only when explicitly
  registered by the SAPI. Currently enabled with cli, cgi and embed SAPIs.
  (Dmitry)
- Changed opendir(), dir() and scandir() to use default context when no context
  argument is passed. (Sara)
- Changed open_basedir to allow tightening in runtime contexts. (Sara)
- Changed PHP/Zend extensions to use flexible build IDs. (Stas)

- Added new Enchant extension. (Pierre)

- Added support for IDN via ICU in intl, idn_to_ascii and idn_to_utf8. (Pierre)
- Added support for SSH via libssh2 in cURL. (Pierre)
- Added support for fnmatch() on Windows. (Pierre)
- Added support for time_nanosleep() and time_sleep_until() on Windows.
  (Pierre)
- Added support for symlink(), readlink(), linkinfo() and link() on Windows.
  They are available only when the running platform supports them. (Pierre)
- Added support for gray levels PNG image with alpha in GD extension. (Pierre)
- Added support for salsa hashing functions in HASH extension. (Scott)